Bug 1607008 - Register threads to the Gecko Profiler outside the HelperThreadState lock. r=sfink

Differential Revision: https://phabricator.services.mozilla.com/D59365